0718 修改通用页面

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>卡口管理系统</title>
+    <title>区域车辆定位及视频联动系统</title>
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="./static/ckplayer/ckplayer/ckplayer.js"></script>
 </body>
 </html>
